# fastapi-project

./: README.md  api.py  crud.py  pyproject.toml
